# Vulkan_Eg

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
cmake/: glsl_compiler.cmake
src/: CMakeLists.txt  atl_window_implementation.inl  main.cpp  pch.h  pch.hpp  renderer.cpp  renderer.h  renderer.hpp  window.cpp  window.h  window.hpp
src/shaders/: shader.vert
src/vk/: devices.cpp  devices.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp
